--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/styles": "^4.11.2",
     "bcrypt": "^5.0.0",
+    "fs": "0.0.1-security",
     "http": "0.0.1-security",
     "imports": "^1.0.0",
     "meteor-node-stubs": "^1.0.1",
