--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,6 @@ app/node_modules/
 private/
 python-app/.env
 python-app/.idea/
+python-app/__pycache__
 Dockerfile
 docker-compose.yml
-python-app/.env
