--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ python-app/.env
 python-app/.idea/
 python-app/__pycache__
 python-app/app.log
+app/.DS_Store
+app/.meteor/.DS_Store
+python-app/.DS_Store
